syntax="proto3";

package main;

message success {
    int32 result = 1;
}

message trainer_request {
    string uuid = 1;
    string ipv4 = 2;
    int32 port = 3;
}

message void {

}

service api {
    rpc add_trainer(trainer_request) returns (success);
}

